# jantar

./: .env.example  .gitignore  EXAMPLES.md  QUERIES.md  README.md  SETUP.md  pyproject.toml  requirements.txt
data/: sources.md
data/knowledge_docs/: aadhaar.json  ayushman-bharat.json  crop-insurance.json  data-gov.json  digilocker.json  driving-licence.json  e-shram.json  epfo-pf.json  income-tax.json  mgnrega.json  mudra-loan.json  passport.json  pm-kisan.json  pmay.json  ration-card-nfsa.json  scholarship-nsp.json  soil-health-card.json  sukanya-samriddhi.json  umang.json  upi.json  voter-id.json
data/seed/: knowledge_base.json
data/tool_specs/: india_post_pincode.json  open_meteo_air_quality.json  open_meteo_historical_weather.json  open_meteo_weather.json  razorpay_ifsc.json  sarvam_stt.json  sarvam_translate.json
scripts/: colab_ingest.py  ingest_docs.py  register_tools.py
scripts/utils/: download_catalog.py
src/jantar/: __init__.py  __main__.py  config.py  db.py  models.py
src/jantar/agent/: classifier.py  executor.py  memory.py  planner.py
src/jantar/api/: app.py
src/jantar/cli/: main.py
src/jantar/llm/: gateway.py
src/jantar/rag/: embeddings.py  hybrid.py  knowledge_rag.py  (+2 more)
tests/: conftest.py  helpers.py  test_config.py  test_models.py
tests/eval/: test_golden_set.py
tests/test_agent/: test_classifier.py  test_executor.py  test_memory.py  test_planner.py
tests/test_api/: test_routes.py
tests/test_llm/: test_gateway.py
tests/test_rag/: test_embeddings.py  test_hybrid.py
tests/test_tools/: test_adapters.py  test_sarvam_adapter.py
(+8 files in other folders)
